Working pdf + heroku

--- a/client/index.html
+++ b/client/index.html
@@ -84,5 +84,8 @@
           <script src="components/socket/socket.service.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
+		<script type="application/javascript">
+			PDFJS.workerSrc = 'bower_components/pdfjs-dist/build/pdf.worker.js';
+		</script>
 </body>
 </html>
