--- a/client/index.html
+++ b/client/index.html
@@ -72,6 +72,8 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/chat-test/chat-test.controller.js"></script>
+          <script src="app/chat-test/chat-test.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/pdf/pdf.controller.js"></script>
