Created presentation page, newclassroom page WIP, classrooms endpoint.

--- a/client/index.html
+++ b/client/index.html
@@ -76,8 +76,12 @@
           <script src="app/chat-test/chat-test.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/newclassroom/newclassroom.controller.js"></script>
+          <script src="app/newclassroom/newclassroom.js"></script>
           <script src="app/pdf/pdf.controller.js"></script>
           <script src="app/pdf/pdf.js"></script>
+          <script src="app/presentation/presentation.controller.js"></script>
+          <script src="app/presentation/presentation.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
