--- a/client/index.html
+++ b/client/index.html
@@ -57,6 +57,8 @@
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="bower_components/pdfjs-dist/build/pdf.js"></script>
       <script src="bower_components/pdfjs-dist/build/pdf.worker.js"></script>
+      <script src="bower_components/angular-upload/angular-upload.js"></script>
+      <script src="bower_components/angular-file-uploader/index.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
