Created past lecture route. Token not unique for user identification, need to change.

--- a/client/index.html
+++ b/client/index.html
@@ -80,6 +80,8 @@
           <script src="app/main/main.js"></script>
           <script src="app/newclassroom/newclassroom.controller.js"></script>
           <script src="app/newclassroom/newclassroom.js"></script>
+          <script src="app/pastLectures/pastLectures.controller.js"></script>
+          <script src="app/pastLectures/pastLectures.js"></script>
           <script src="app/pdf/pdf.controller.js"></script>
           <script src="app/pdf/pdf.js"></script>
           <script src="app/pdfStudent/pdfStudent.controller.js"></script>
