--- a/client/index.html
+++ b/client/index.html
@@ -74,8 +74,8 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
-          <script src="app/chat-test/chat-test.controller.js"></script>
-          <script src="app/chat-test/chat-test.js"></script>
+          <script src="app/chat/chat.controller.js"></script>
+          <script src="app/chat/chat.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/newclassroom/newclassroom.controller.js"></script>
