--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
+      <link rel="stylesheet" href="bower_components/toastr/toastr.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -59,6 +60,8 @@
       <script src="bower_components/pdfjs-dist/build/pdf.worker.js"></script>
       <script src="bower_components/angular-upload/angular-upload.js"></script>
       <script src="bower_components/angular-file-uploader/index.js"></script>
+      <script src="bower_components/aws-sdk-js/dist/aws-sdk.js"></script>
+      <script src="bower_components/toastr/toastr.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
